schema {
  query: Query
  mutation: Mutation
}

"""
Abfrageoperationen für Supplements
"""
type Query {
  """
  Alle Supplements abrufen mit optionalen Suchkriterien
  """
  supplements(suchkriterien: SuchkriterienInput): [Supplement!]!

  """
  Ein einzelnes Supplement nach ID
  """
  supplement(id: ID!): Supplement
}

"""
Mutationen zum Erstellen, Aktualisieren und Löschen von Supplements sowie Auth
"""
type Mutation {
  """
  Ein neues Supplement anlegen
  """
  create(input: SupplementInput!): CreatePayload!

  """
  Ein Supplement aktualisieren
  """
  update(input: SupplementUpdateInput!): UpdatePayload!

  """
  Ein Supplement löschen
  """
  delete(id: ID!): Boolean!

  """
  Login-Token anfordern
  """
  token(username: String!, password: String!): TokenResult!

  """
  Access-Token mit Refresh-Token erneuern
  """
  refresh(refresh_token: String!): TokenResult!
}

"""
Supplement mit Beschreibung und Bildern
"""
type Supplement {
  id: Int!
  name: String!
  portionen: Int
  supplementArt: SupplementArt
  beschreibung: Beschreibung
  produktbilder: [Produktbild!]
  erzeugt: DateTime
  aktualisiert: DateTime
}

"""
Zusätzliche Information über ein Supplement
"""
type Beschreibung {
  id: Int!
  info: String
  vorteile: String
  dosierempfehlung: String
}

"""
Produktbild eines Supplements
"""
type Produktbild {
  id: Int!
  bezeichnung: String!
  path: String
}

"""
Darreichungsform des Supplements
"""
enum SupplementArt {
  PULVER
  TABLETTEN
  KAPSELN
}

"""
Suchkriterien für Supplements
"""
input SuchkriterienInput {
  name: String
  supplementArt: SupplementArt
}

"""
Eingabedaten zur Erstellung eines Supplements
"""
input SupplementInput {
  name: String!
  portionen: Int
  supplementArt: SupplementArt
  beschreibung: BeschreibungInput
  produktbilder: [ProduktbildInput!]
}

"""
Eingabedaten zur Aktualisierung eines Supplements
"""
input SupplementUpdateInput {
  id: ID!
  version: Int!
  name: String
  portionen: Int
  supplementArt: SupplementArt
  beschreibung: BeschreibungInput
  produktbilder: [ProduktbildInput!]
}

"""
Eingabedaten für eine Beschreibung
"""
input BeschreibungInput {
  info: String
  vorteile: String
  dosierempfehlung: String
}

"""
Eingabedaten für ein Produktbild
"""
input ProduktbildInput {
  bezeichnung: String!
  path: String
}

"""
Rückgabe nach Erstellen eines Supplements
"""
type CreatePayload {
  id: Int!
}

"""
Rückgabe nach Aktualisieren eines Supplements
"""
type UpdatePayload {
  version: Int
}

"""
Zugriffs- und Erneuerungstoken für Authentifizierung
"""
type TokenResult {
  access_token: String!
  expires_in: Int!
  refresh_token: String!
  refresh_expires_in: Int!
}

"""
Benutzerdefinierter Skalartyp für ISO-8601 Zeitstempel
"""
scalar DateTime
